test/tests/stages/17_supporting_dynamic_memory_allocation/valid/void/cast_to_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[56]:
  int
  identifier(x)
  ;
  int
  identifier(set_x)
  (
  int
  identifier(i)
  )
  {
  identifier(x)
  =
  identifier(i)
  ;
  return
  const int(0)
  ;
  }
  void
  identifier(do_nothing)
  (
  void
  )
  {
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  (
  void
  )
  identifier(x)
  ;
  (
  void
  )
  identifier(set_x)
  (
  const int(12)
  )
  ;
  (
  void
  )
  identifier(do_nothing)
  (
  )
  ;
  return
  identifier(x)
  ;
  }
