test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/bitwise_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(10)
  ;
  int
  identifier(y)
  =
  const int(11)
  ;
  identifier(x)
  &
  (
  void
  )
  identifier(y)
  ;
  return
  const int(0)
  ;
  }
